# pandas_or_pyspark

./: .coverage  .cursorrules  .gitignore  CLEANUP_PLAN.md  PERF_SEPARATION_PLAN.md  README.md  REPORTING_PLAN.md  benchmark.md  benchmark_s1.md  benchmark_s2.md  demo_api_3_min  examples.py  pyproject.toml  pytest.ini  requirements.txt  run_benchmark
benchmarks/: relational_bench.py  smoke_reports.py
docs/: README.md  REPO_CLARITY_PLAN.md
reports/: bench_smoke.md  benchmark_s2.md  billion_row_challenge.md  billion_row_om.md  brc_one_minute.md  compatibility.md  relational_benchmark.md
reports/api_demo/: api_demo_smoke.md  bench_smoke.md  bench_utils_check.md  benchmark_s1.md  compatibility.md  demo_api_3_min.md  relational_api_demo.md  test_bench.md
reports/benchmarks/: bench_all_modes.md  bench_all_modes_final.md  bench_all_modes_smoke.md  benchmark.md
reports/brc/: billion_row_challenge.md  billion_row_challenge_100m.md  billion_row_challenge_from_jsonl.md  billion_row_challenge_pipeline.md  billion_row_challenge_smoke.md  billion_row_om.md  brc_1b_groupby.md  brc_one_minute.md  brc_order_of_magnitude.md  brc_scale.md  brc_smoke_groupby.md  brc_under_1min_capacity.md  test_brc_from_jsonl.md  test_brc_smoke.md  test_demo_smoke.md
reports/perf/: perf_matrix.md  test_perf_matrix.md
results/: brc.jsonl  brc_pipeline.jsonl  brc_smoke.jsonl  demo_brc.jsonl  om_dask_smoke.jsonl  om_duckdb_smoke.jsonl  om_numba_smoke.jsonl  om_numpy_smoke.jsonl  om_pandas_24845.jsonl  om_pandas_33300.jsonl  om_pandas_33957.jsonl  om_pandas_41954.jsonl  om_pandas_42997.jsonl  om_pandas_43891.jsonl  om_pandas_44607.jsonl  om_pandas_46984.jsonl  om_pandas_47037.jsonl  om_pandas_56053.jsonl  om_pandas_56621.jsonl  om_pandas_67305.jsonl  om_pandas_67972.jsonl  om_pandas_73090.jsonl  om_pandas_74022.jsonl  om_pandas_75758.jsonl  om_pandas_81952.jsonl  om_pandas_smoke.jsonl  om_polars_smoke.jsonl  om_pyspark_47324.jsonl  om_pyspark_smoke.jsonl  perf.jsonl  test_brc.jsonl  test_perf.jsonl
results/brc/: brc_1b_groupby.jsonl
scripts/: README.md  bench_backends.py  billion_row_challenge.py  billion_row_om_runner.py  brc_generate_data.py  brc_one_minute_runner.py  brc_scale_runner.py  compat_matrix.py  parquet_inventory.py  relational_bench.py  utils.py
scripts/api_demo/: bench_args.py  bench_backends.py  bench_console.py  bench_lib.py  bench_runner.py  compat_matrix.py  demo_args.py  demo_runner.py  relational_bench.py  smoke_reports.py
scripts/brc/: brc_core.py  (+13 more)
src/: README.md
tests/: conftest.py  test_backend.py  test_backend_detection.py  test_backend_roundtrip.py  test_bench_backends_refactor.py  test_brc_functional.py  test_brc_om_runner.py  test_brc_one_minute.py  test_brc_reporting.py  test_brc_rowcount.py  test_frame_io.py  test_frame_ops.py  test_io_polars_duckdb.py  test_parquet_and_merge.py  test_run_all_scripts.py  test_utils_module.py
tmp_parq/: chunk.parquet
(+37 files in other folders)
